--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit
-langchain-google-genai
+langchain>=0.1.0
+langchain-google-genai>=1.0.0
+google-generativeai>=0.4.0
 langchain-community
 chromadb
 Pillow
-pandas # Añadido por si se usa en preparar_base_de_datos.py
-openpyxl # Añadido si tus archivos de datos son .xlsx
+pandas
+openpyxl
